Added publish script

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "scripts": {
     "start": "vite ./examples",
     "build": "vite build ./examples",
-    "test": "echo \"No test specified\""
+    "test": "echo \"No test specified\"",
+    "publish": "np --no-tests --no-2fa"
   },
   "devDependencies": {
     "three": "^0.136.0",
