--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "three-extended-material",
-  "version": "0.1.3",
+  "version": "0.2.0",
   "scripts": {
     "start": "vite ./examples",
     "build": "vite build ./examples",
@@ -8,7 +8,11 @@
     "release": "np --no-tests --no-2fa"
   },
   "devDependencies": {
+    "@react-three/fiber": "^8.14.1",
+    "@vitejs/plugin-react": "^4.0.4",
     "lil-gui": "^0.18.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "three": "^0.156.1",
     "vite": "^4.4.9"
   },
@@ -17,6 +21,7 @@
   ],
   "main": "./src/ExtendedMaterial.js",
   "exports": {
-    ".": "./src/ExtendedMaterial.js"
+    ".": "./src/ExtendedMaterial.js",
+    "./react": "./src/ExtendedMaterial.react.jsx"
   }
 }
